# c_elegans_tracking

./: .gitignore  .pre-commit-config.yaml  README.md  change_data_structure.py  local_mapping.json  pyproject.toml
data_conversion/: convert_c_elegans.py  straightened_config.toml  twisted_config.toml
data_conversion/cluster_configs/: straight_lin_26_0208.toml  twisted_lin_26_0208.toml  twisted_lin_26_0213.toml  twisted_lin_26_0315.toml
experiments/: run_evaluation.py  run_tracking.py  tracking_config.toml
experiments/configs/: test_pipeline.toml
src/c_elegans_utils/: __init__.py  cubic_spline_3d.py  dataset.py  dist_to_spline.py  experiment.py  graph_attrs.py  spline_computation.py  spline_widget.py  utils.py  worm_space.py
src/c_elegans_utils/tracking/: __init__.py  cand_graph_params.py  create_cand_graph.py  evaluate.py  nodes_from_segmentation.py  run_motile.py  solver_params.py
src/c_elegans_utils/visualization/: candidate_node_widget.py  convert_gt_track_to_worm_space.py  experiment_viewer.py  view_results_napari.py  worm_space_widget.py
src/c_elegans_utils/worm_space/: __init__.py  compute_central_spline.py  cubic_spline_3d.py  worm_space.py
tests/: test_convert_gt_track_to_worm_space.py  test_nodes_from_segmentation.py  test_spline_computation.py
tests/resources/: lattice.csv  seam_cells.csv
visualization/: load_c_elegans_original_format.py  straightened_config.toml  straightened_local.toml  straightened_remote.toml  tracking_demo.py  twisted_remote.toml  view_c_elegans.py  view_experiment_results.py  view_experiments.py
