[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
[tool.hatch.build.targets.wheel]
packages = ["src/c_elegans_utils"]

[project]
name = "c-elegans-utils"
description = "Utilities library for tracking C elegans with the motile tracker"
readme = "README.md"
requires-python = ">=3.10,<3.12"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = []
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "malinmayorc@janelia.hhmi.org", name = "Funke Lab" },
]
version="v0.0.1_alpha"
dependencies = [
  "funlib-geometry>=0.3.0,<0.4",
  "motile>=0.3.0,<0.4",
  "funlib-persistence>=0.5.3,<0.6", "juliacall>=0.9.24,<0.10",
]

# TODO: Get back dynamic versions
# dynamic = ["version"]

[tool.pixi.project]
channels = ["conda-forge", "funkelab", "gurobi"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
ilpy = ">=0.4.1,<0.5"
tifffile = ">=2024.12.12,<2025"
pandas = ">=2.2.3,<3"
# numpy = ">=2.2.0,<3"
tqdm = ">=4.67.1,<5"
networkx = ">=3.4.2,<4"
zarr = ">=2.18.4,<3"
pydantic = ">=2.10.3,<3"
napari = ">=0.5.6,<0.6"
pyqt = ">=5.15.9,<6"
ipykernel = ">=6.29.5,<7"
pip = ">=24.3.1,<25"
pytest = ">=8.3.4,<9"
matplotlib = ">=3.10.0,<4"
pyqtgraph = ">=0.13.7,<0.14"

[tool.pixi.pypi-dependencies]
c-elegans-utils = { path = ".", editable = true }
motile_tracker = { path = "../motile_tracker", editable = true }


[tool.pixi.tasks]
view_twisted = "python visualization/view_c_elegans.py visualization/twisted_remote.toml --raw --manual --seg --seg-centers"
view_straightened = "python visualization/view_c_elegans.py visualization/straightened_local.toml --raw --manual --seg --seg-centers --seam-cell-tracks"
view_straightened_remote = "python visualization/view_c_elegans.py visualization/straightened_remote.toml --raw --seg --manual --seam-cell-tracks"

tracking_demo = "python visualization/tracking_demo.py visualization/straightened_local.toml"

[tool.pixi.feature.dev.dependencies]
ruff = "*"

[tool.pixi.feature.dev.tasks]
format = "ruff format ."
lint = "ruff check . --fix"

[tool.pixi.environments]
dev = ["dev"]


# https://github.com/charliermarsh/ruff
[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
extend-select = [
    "E",    # style errors
    "F",    # flakes
    "I001", # isort
    "U",    # pyupgrade
    "S",    # bandit
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
]
ignore = [
  "S311",   # random numbers for cryptography
  "S101",   # asserts not allowed
]
